overflow fix

--- a/comp JS/src/styles/styles.sass
+++ b/comp JS/src/styles/styles.sass
@@ -130,6 +130,7 @@ ul li:hover
     text-align: center
     background-color: black
     color: white
+    overflow: auto
     border-radius: 9px
 
 .style #btn
@@ -146,3 +147,5 @@ ul li:hover
 .style #para
     margin-top: 5px
     opacity: 0.6
+
+.style #linux
